# VulkanCraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/data/: block_description.yaml
Assets/shaders/: triangle.vert
Assets/shaders/chunks/: block.frag  block.vert
Assets/shaders/gltf/: common.glsl  mesh.frag  mesh.vert
Scripts/WireSharkPlugins/: vkcraft_protocol_dissector.lua
resources/shaders/: compile.py  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
resources/shaders/chunks/: block.frag  block.vert
resources/shaders/common/: scene_data.glsl
resources/shaders/gltf/: common.glsl  mesh.frag  mesh.vert
src/: application.cpp  application.h  errors.h  game.h  main.cpp  vulkan_renderer.cpp  vulkan_renderer.h
src/Application/: Application.cpp  Application.h  IGame.h  InputHandler.cpp  InputHandler.h
src/Client/: BlockData.h  Chunk.cpp  Chunk.h  ChunkRenderer.cpp  ChunkRenderer.h  GameClient.cpp  GameClient.h
src/Graphics/: DescriptorAllocator.cpp  DescriptorLayoutBuilder.cpp  DescriptorWriter.cpp  DescriptorWriter.h  GLTFModel.cpp  GLTFModel.h  PipelineBuilder.cpp  PipelineBuilder.h  VulkanRenderer.cpp  VulkanRenderer.h  descriptor_allocator.cpp  descriptor_allocator.h  descriptor_layout_builder.cpp  descriptor_layout_builder.h  descriptor_writer.cpp  gltf_model.cpp  gltf_model.h  gpu_structs.h  mesh.h  pipeline_builder.h  renderable.h  utils.cpp  utils.h  vulkan_renderer.cpp  vulkan_renderer.h
src/Graphics/Geometry/: BlockFace.h
src/Network/: Address.h  NetworkBuffer.cpp  NetworkBuffer.h  NetworkHost.cpp  NetworkHost.h  Packet.cpp  Packet.h  Packets.h  Protocol.h
src/Network/Packets/: ClientPackets.h  ServerPackets.h  SystemPackets.h
src/Platform/: Errors.cpp  Errors.h  Platform.h
src/Platform/Sockets/: Common.h  NetworkAddress.cpp  NetworkAddress.h  NetworkBuffer.cpp  NetworkBuffer.h  Socket.cpp  Socket.h  SocketAPI.cpp  SocketAPI.h
src/Server/: GameServer.cpp  GameServer.h
src/Utils/: Math.h  NonCopyable.h  NonMovable.h
src/VulkanCraft/: vulkan_craft.cpp  vulkan_craft.h
src/backend/: pipeline_builder.cpp  pipeline_builder.h  resources.cpp  resources.h
src/backend/resource_manager/: resource.h  resource_handle.h  resource_manager.h  text_resource.h
src/events/: EventDispatcher.h  EventHandler.cpp  EventHandler.h  EventListener.h  event.h  event_dispatcher.h  event_handler.cpp  event_handler.h  event_listener.h
src/events/WindowEvents/: KeyEvents.h  MouseEvents.h  mouse_events.h
src/events/window_events/: key_events.h
src/pong_game/: pong_game.cpp  pong_game.h
src/utils/: vulkan.h
